# JniExample

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/step/jniexample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/utils/: androidlog.h  log.h
app/src/main/java/com/step/jniexample/: CompressUtils.java  MainActivity.java  SignatureUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/step/jniexample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
